<resources>
    <string name="app_name">DoLater</string>

    <string name="question">What do you need to do?</string>

    <string name="cta">Remind Me</string>

    <string name="tomorrow">Tomorrow</string>
    <string name="friday">Friday</string>
    <string name="monday">Next Week</string>
    <string name="weekend">Weekend</string>

    <string name="morning">Morning</string>
    <string name="afternoon">Afternoon</string>
    <string name="night">Night</string>
</resources>
