<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ca.majime.dolater.MainActivity">

    <TextView
        android:id="@+id/question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="40dp"
        android:text="@string/question"
        android:theme="@style/Text.Big"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Text.Input"
        android:background="@color/offWhite"
        android:textColor="@color/textBlack"
        android:textColorHighlight="@color/textGray"
        android:textAlignment="center"
        android:hint=""
        android:lines="1"
        android:maxLines="1"
        android:inputType="text"
        android:scrollHorizontally="true"
        android:ellipsize="end"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintTop_toBottomOf="@+id/question"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:imeOptions="actionDone"
        />

    <LinearLayout
        android:id="@+id/details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            >

            <Button
                android:id="@+id/date_1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                style="@style/Button.Outline"
                android:text="@string/tomorrow"
                />

            <Button
                android:id="@+id/date_2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                style="@style/Button.Outline"
                android:text="@string/friday"
                />

            <Button
                android:id="@+id/date_3"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                style="@style/Button.Outline"
                android:text="@string/weekend"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:layout_marginTop="20dp"
            >

            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                style="@style/Button.Outline"
                android:text="@string/morning"
                android:backgroundTint="@color/textGray"
                />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                style="@style/Button.Outline"
                android:text="@string/afternoon"
                />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                style="@style/Button.Outline"
                android:text="@string/night"
                />

        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            style="@style/Button.Outline"
            android:backgroundTint="@color/colorAccent"
            android:textColor="@color/offWhite"
            android:text="@string/cta"
            />

    </LinearLayout>


</android.support.constraint.ConstraintLayout>
